--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,30 @@ ul li a:hover{
     margin: auto;
     color: #fff;
     position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.content .img{
+    width: 430px;
+    height: 430px;
+    border-radius: 50%;
+    border: 2px solid grey;
+    margin-top: 120px;
+    cursor: pointer;
+}
+.content img:hover{
+    filter: blur(5px);
+}
+.img img{
+    width: 430px;
+    height: 430px;
+    border-radius: 50%;
+    border: 2px solid grey;
+    transition: 0.9s;
+}
+.content .para{
+    margin-left: 60px;
 }
 .content .par{
     padding-left: 20px;
@@ -113,13 +137,16 @@ ul li a:hover{
     font-family: Arial;
     letter-spacing: 1.2px;
     line-height: 30px;
+    margin-top: 90px;
+    align-self: flex-end;
 }
 .content h1{
     font-family: 'Times New Roman';
     font-size: 50px;
     padding-left: 20px;
-    margin-top: 9%;
+    margin-top: 28%;
     letter-spacing: 2px;
+    align-self: flex-end;
 }
 .content .cn{
     width: 160px;
@@ -144,97 +171,4 @@ ul li a:hover{
 .content span{
     color: #fc43ec;
     font-size: 60px;
-}
-/*Section Login*/
-.form{
-    width: 250px;
-    height: 380px;
-    background: linear-gradient(to top, rgba(0,0,0,0.5) 50%, rbga(0,0,0,0.5) 50%);
-    position: absolute;
-    top: -20px;
-    left: 870px;
-    border-radius: 10px;
-    padding: 25px;
-}
-.form h2{
-    width: 220px;
-    font-family: sans-serif;
-    text-align: center;
-    color: #fc43ec;
-    font-size: 22px;
-    background-color: #fff;
-    border-radius: 10px;
-    margin: 2px;
-    padding: 8px;
-}
-.form input{
-    width: 240px;
-    height: 35px;
-    background: transparent;
-    border-bottom: 1px solid #fc43ec;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    color: #fff;
-    font-size: 15px;
-    letter-spacing: 1px;
-    margin-top: 30px;
-    font-family: sans-serif;
-}
-.form input:focus{
-    outline: none;
-}
-::placeholder{
-    color: #fff;
-    font-family: Arial;
-}
-.btnn{
-    width: 200px;
-    height: 40px;
-    background: #fc43ec;
-    border: none;
-    margin-top: 30px;
-    font-size: 18px;
-    border-radius: 10px;
-    cursor: pointer;
-    color: #fff;
-    transition: 0.4s ease;
-}
-.btnn:hover{
-    background: #fff;
-    color: #fc43ec;
-}
-.btnn a{
-    text-decoration: none;
-    color: #000;
-    font-weight: bold;
-}
-.form .link{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    padding-top: 20px;
-    text-align: center;
-}
-.form .link a{
-    text-decoration: none;
-    color: #fc43ec;
-}
-.liw{
-    padding-top: 15px;
-    padding-bottom: 10px;
-    text-align: center;
-}
-.icons a{
-    text-decoration: none;
-    color: #fff;
-}
-.icons ion-icon{
-    color: #fff;
-    font-size: 30px;
-    padding-left: 14px;
-    padding-top: 5px;
-    transition: 0.3s ease;
-}
-.icons ion-icon:hover{
-    color: #fc43ec;
 }
